--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <p>
     Exercises:
     <ul>
-    	<li><a href="file:///Users/angellobarocio/github/interactivemedia323/Excercise%201/index.html">Exercise 1</a></li>
+    	<li><a href="http://barocio11.github.io/interactivemedia323/Exercise 1/">Exercise 1</a></li>
     	<li><a href="exercise2a">Exercise 2a</a></li>
       <li><a href="exercise2b">Exercise 2b</a></li>
     </ul>
