--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -1,32 +1,31 @@
+
 <!DOCTYPE html>
 <html>
-
 <head>
-  <title>Angello's Homepage</title>
+  <title>Project 1</title>
 </head>
 
 <body>
-  <h1>Angello's Homepage</h1>
-  <p>
-    Projects
-    <ul>
-    	<li><a href="http://angellobarocio.github.io/interactivemedia323/project1/"> Project 1 </a> </li>
-    </ul>
-  </p>
-  <p>
-    Exercises:
-    <ul>
-    	<li><a href="exercise1">Exercise 1</a></li>
-    	<li><a href="exercise2a">Exercise 2a</a></li>
-      <li><a href="exercise2b">Exercise 2b</a></li>
-    </ul>
-  </p>
+  <h1>Project 1</h1>
 
-<<<<<<< HEAD
- 
-=======
->>>>>>> gh-pages
-  
+    <br>
+    <a href="http://salem.craigslist.org/res/5274421407.html"><h3>Henry Flynt Ad</h3></a>
+    <br>
+    <p>For this Project I used a article written by the Late Henry Flynt. Henry Flynt was a philosopher who wrote an essay about the distinction between Art and Brend. From reading the article I starting understanding it as a critique, more than a article. My platform was Craigslist and I decided on it because I wanted to challenge the platform and use it in a different way. From that point I decided to create a job listing as Henry Flynt. Since the article involved a section about the distinction between Art and Science, It was decided to relate to that section. The ad depicts Henry Flynt as a Science Major and Minor looking for a job in Art critique. It describes him as a candidate that could be taken seriously because of his views on art. I personified the article to give it life, and created a persona out of the author.</p>
+  <div id="one"><img src="Images/Img 1.PNG" height="600" width="1200"</div>
+    <br>
+  <div id="two"><img src="Images/img 2.PNG" height="600" width="1200"</div>
+    <br>
+  <div id="three"><img src="Images/img 3.PNG" height="600" width="1200"</div>
+        <br>
+  <div id="four"><img src="Images/img 4.PNG" height="600" width="1200"</div>
+        <br>
+  <div id="five"><img src="Images/img 5.PNG" height="600" width="1200"</div>
+        </ul>
+        <br>
+  <li><div id="six"><img src="Images/img 6.PNG" height="600" width="1200"</div>
+  <br>
 </body>
 
 </html>
+
