--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <p>
     Projects
     <ul>
-    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 1/"> Project 1 </a> </li>
+    	<li><a href="http://barocio11.github.io/interactivemedia323/Project%201/"> Project 1 </a> </li>
     </ul>
   </p>
   <p>
