--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     Exercises:
     <ul>
     	<li><a href="http://barocio11.github.io/interactivemedia323/Exercise 1/">Exercise 1</a></li>
-    	<li><a href="http://barocio11.github.io/interactivemedia323/Exercise 2/">Exercise 2a</a></li>
+    	<li><a href="http://barocio11.github.io/interactivemedia323/Exercise 2a/">Exercise 2a</a></li>
       <li><a href="exercise2b">Exercise 2b</a></li>
     </ul>
   </p>
