--- a/Exercise 2/index.html
+++ b/Exercise 2/index.html
@@ -73,6 +73,14 @@
              		<br> Don't forget to be loose with your knees. Otherwise you're going to look very stiff! <br>That is not how you want the dance to look -- it's all about feeling the beat and flowing with the motion of the music. <br>It helps to shake around and let your arms and legs feel free before dancing, just to get in the groove. <br>Add your own personal flair to the dance as well. Basically, just have fun!</li>
              	</div>
              	<br><br><br>
+                  <div class="section video  sticky ">
+                  <h2><span class="mw-headline" id="Teach Me How to Dougie">Video</span></h2>
+                  <div id="video" class="section_text">
+                  <center>
+                  <p><iframe width="750" height="600" src="https://www.youtube.com/embed/NJxYiIfr4WM" frameborder="0" allowfullscreen=""></iframe></p>
+                  </center>
+                  <p><br></p>
+
 
 <a href # "top"> Back to top </a>
 </body>
