--- a/index.html
+++ b/index.html
@@ -23,14 +23,7 @@
     </ul>
   </p>
 
-
-Test test test
-
-
-<<<<<<< HEAD
- 
-=======
->>>>>>> gh-pages
+    <img src="IMG_0568.JPG" height="600" width="600">
 
   
 </body>
