--- a/Exercise 1/index.html
+++ b/Exercise 1/index.html
@@ -32,7 +32,7 @@
              	</div>
              	<br><br><br>
                   <h2>Step 2:</h2>
-             	<div id="two"> <img src="Images/Image2Dougie.jpg">
+             	<div id="two"> <img src="Images/image 2 Dougie.jpg">
              		<br> Start with the side-to-side move. Begin swaying back and forth, starting with the right. <br>Pause for a beat while putting your weight on the foot on the side you're leaning, thinking right step out, left tap. <br>Then sway to the left and repeat.You can do it to the beat, or double-time every third beat. <br>Put your own rhythm into it so it feels comfortable. Keep your knees loose and remember, right step out, left tap. <br>Left side out, right tap. Don't bring the "tap" all the way in; it's just a light touch on the floor.</li>
              	</div>
              	<br><br><br>
