--- a/Exercise 1/index.html
+++ b/Exercise 1/index.html
@@ -38,13 +38,13 @@
              	<br><br><br>
                   <br>
                   <h2>Step 3:</h2>
-             <div id="three"> <img src="Images/image 3 Dougie.jpg">
+             <div id="three"> <img src="Images/Image 3 Dougie.jpg">
              		<br> Sway right, left, right, right. Follow it up with left, right, left, left. <br>This is the same move, only you're swaying the the same side twice after you've swayed both right and left (or left and right). <br>Think, "one and two and double this side." The start of each section should begin on the 1 and 5 <br>-- right and 2 and 3 and 4 and left and 6 and 7 and 8. Start feeling it in your arms. <br>That's the next step! Get your shoulders into the groove, release your knees, and relax your hips. The style comes all from you. <br>Step out on the whole counts -- 1, 2, 3, and 4. Tap on the "and" beats, so it's 1 tap 2 tap 3 tap 4.</li>
              	</div>
              	<br><br><br>
                   <br>
                   <h2>Step 4:</h2>
-             	<div id="four"> <img src="Images/image 4 Dougie.jpg">
+             	<div id="four"> <img src="Images/Image 4 Dougie.jpg">
              		<br> Add some arms once you feel you have the style down. As you're doing the side-to-side movement, <br>bring your hand (on the side you're swaying to) towards you in a fist in a counter-clockwise circle motion, <br>until your arm is bent with your elbow facing down and your first up by your head. <br>Do this move with the sway of the same side and then again with the opposite arm. Don't overcomplicate it! <br>This arm-movement is the most popular Dougie arm move, but some other versions include arm-pops, rolls, etc. <br>Whatever works for you, include in your Dougie. We'll cover some variations next. Try "driving your car." <br>With the side you're swaying on, grab the steering wheel and sway your arm back and forth. Then bring it in to incorporate other moves.</li>
              	</div>
              	<br><br><br>
