--- a/Exercise 1/index.html
+++ b/Exercise 1/index.html
@@ -26,13 +26,13 @@
              <br>
              	<ol>
                         <h2>Step 1:</h2>
-             	<div id="one"> <img src="Images/image 1 Dougie.jpg">
+             	<div id="one"> <img src="Images/Image 1 Dougie.jpg">
              		<br> <span>Start by putting on a song with a good beat. Ideally "My Dougie" by Lil' Will or "Teach Me How to Dougie" <br>by Cali Swag District should be on. But you can technically do the Dougie to any song with a good hip hop beat.</span></li>
                         <br>
              	</div>
              	<br><br><br>
                   <h2>Step 2:</h2>
-             	<div id="two"> <img src="Images/image 2 Dougie.jpg">
+             	<div id="two"> <img src="Images/Image 2 Dougie.jpg">
              		<br> Start with the side-to-side move. Begin swaying back and forth, starting with the right. <br>Pause for a beat while putting your weight on the foot on the side you're leaning, thinking right step out, left tap. <br>Then sway to the left and repeat.You can do it to the beat, or double-time every third beat. <br>Put your own rhythm into it so it feels comfortable. Keep your knees loose and remember, right step out, left tap. <br>Left side out, right tap. Don't bring the "tap" all the way in; it's just a light touch on the floor.</li>
              	</div>
              	<br><br><br>
@@ -50,25 +50,25 @@
              	<br><br><br>
                   <br>
                   <h2>Step 5:</h2>
-             	<div id="five"> <img src="Images/image 5 Dougie.jpg">
+             	<div id="five"> <img src="Images/Image 5 Dougie.jpg">
              		<br> Try the "Cat-Daddy," another popular Dougie move. Punch down by your hip with the arm of the opposite side <br>(e.g. right hip, left arm). This is similar to the arm movement just discussed, only on a slightly lower level. <br>Bring your hips and knees down with your arms, too, lowering your entire body.</li>
              	</div>
              	<br><br><br>
                   <br>
                   <h2>Step 6:</h2>
-             	<div id="six"> <img src="Images/image 6 Dougie.jpg">
+             	<div id="six"> <img src="Images/Image 6 Dougie.jpg">
              		<br> Try the "Wheelchair" move. With both your arms, make forward circles to your sides like you're pushing yourself in a wheelchair <br>(you probably saw that one coming). At the same time, start crouching lower with each rotation, either with your knees going forward or to the sides <br>(like the chicken-wing move with your legs!). Vary this one up with the moves already discussed as the music progresses.</li>
              	</div>
              	<br><br><br>
                   <br>
                   <h2>Step 7:</h2>
-             	<div id="seven"> <img src="Images/image 7 Dougie.jpg">
+             	<div id="seven"> <img src="Images/Image 7 Dougie.jpg">
              		<br> Now do the Dougie "Fresh!" This move is signature for all styles of Dougie. <br>Bring your hand over the top of your head and slide it off the back, like you're slicking your hair down. <br>Greasing the mullet, if you will. Do this with the side-to-side move, shifting your shoulders side to side, <br>then do it with the other hand. Vary your levels with this move too.</li>
              	</div>
              	<br><br><br>
                   <br>
                   <h2>Step 8:</h2>
-             	<div id="eight"> <img src="Images/image 8 Dougie.jpg">
+             	<div id="eight"> <img src="Images/Image 8 Dougie.jpg">
              		<br> Don't forget to be loose with your knees. Otherwise you're going to look very stiff! <br>That is not how you want the dance to look -- it's all about feeling the beat and flowing with the motion of the music. <br>It helps to shake around and let your arms and legs feel free before dancing, just to get in the groove. <br>Add your own personal flair to the dance as well. Basically, just have fun!</li>
              	</div>
              	<br><br><br>
