--- a/Exercise 1/index.html
+++ b/Exercise 1/index.html
@@ -26,49 +26,49 @@
              <br>
              	<ol>
                         <h2>Step 1:</h2>
-             	<div id="one"> <img src="Images/Image 1 Dougie.jpg">
+             	<div id="one"> <img src="Images/Dougie 1.jpg">
              		<br> <span>Start by putting on a song with a good beat. Ideally "My Dougie" by Lil' Will or "Teach Me How to Dougie" <br>by Cali Swag District should be on. But you can technically do the Dougie to any song with a good hip hop beat.</span></li>
                         <br>
              	</div>
              	<br><br><br>
                   <h2>Step 2:</h2>
-             	<div id="two"> <img src="Images/Image 2 Dougie.jpg">
+             	<div id="two"> <img src="Images/Dougie 2.jpg">
              		<br> Start with the side-to-side move. Begin swaying back and forth, starting with the right. <br>Pause for a beat while putting your weight on the foot on the side you're leaning, thinking right step out, left tap. <br>Then sway to the left and repeat.You can do it to the beat, or double-time every third beat. <br>Put your own rhythm into it so it feels comfortable. Keep your knees loose and remember, right step out, left tap. <br>Left side out, right tap. Don't bring the "tap" all the way in; it's just a light touch on the floor.</li>
              	</div>
              	<br><br><br>
                   <br>
                   <h2>Step 3:</h2>
-             <div id="three"> <img src="Images/Image 3 Dougie.jpg">
+             <div id="three"> <img src="Images/Dougie 3.jpg">
              		<br> Sway right, left, right, right. Follow it up with left, right, left, left. <br>This is the same move, only you're swaying the the same side twice after you've swayed both right and left (or left and right). <br>Think, "one and two and double this side." The start of each section should begin on the 1 and 5 <br>-- right and 2 and 3 and 4 and left and 6 and 7 and 8. Start feeling it in your arms. <br>That's the next step! Get your shoulders into the groove, release your knees, and relax your hips. The style comes all from you. <br>Step out on the whole counts -- 1, 2, 3, and 4. Tap on the "and" beats, so it's 1 tap 2 tap 3 tap 4.</li>
              	</div>
              	<br><br><br>
                   <br>
                   <h2>Step 4:</h2>
-             	<div id="four"> <img src="Images/Image 4 Dougie.jpg">
+             	<div id="four"> <img src="Images/Dougie 4.jpg">
              		<br> Add some arms once you feel you have the style down. As you're doing the side-to-side movement, <br>bring your hand (on the side you're swaying to) towards you in a fist in a counter-clockwise circle motion, <br>until your arm is bent with your elbow facing down and your first up by your head. <br>Do this move with the sway of the same side and then again with the opposite arm. Don't overcomplicate it! <br>This arm-movement is the most popular Dougie arm move, but some other versions include arm-pops, rolls, etc. <br>Whatever works for you, include in your Dougie. We'll cover some variations next. Try "driving your car." <br>With the side you're swaying on, grab the steering wheel and sway your arm back and forth. Then bring it in to incorporate other moves.</li>
              	</div>
              	<br><br><br>
                   <br>
                   <h2>Step 5:</h2>
-             	<div id="five"> <img src="Images/Image 5 Dougie.jpg">
+             	<div id="five"> <img src="Images/Dougie 5.jpg">
              		<br> Try the "Cat-Daddy," another popular Dougie move. Punch down by your hip with the arm of the opposite side <br>(e.g. right hip, left arm). This is similar to the arm movement just discussed, only on a slightly lower level. <br>Bring your hips and knees down with your arms, too, lowering your entire body.</li>
              	</div>
              	<br><br><br>
                   <br>
                   <h2>Step 6:</h2>
-             	<div id="six"> <img src="Images/Image 6 Dougie.jpg">
+             	<div id="six"> <img src="Images/Dougie 6.jpg">
              		<br> Try the "Wheelchair" move. With both your arms, make forward circles to your sides like you're pushing yourself in a wheelchair <br>(you probably saw that one coming). At the same time, start crouching lower with each rotation, either with your knees going forward or to the sides <br>(like the chicken-wing move with your legs!). Vary this one up with the moves already discussed as the music progresses.</li>
              	</div>
              	<br><br><br>
                   <br>
                   <h2>Step 7:</h2>
-             	<div id="seven"> <img src="Images/Image 7 Dougie.jpg">
+             	<div id="seven"> <img src="Images/Dougie 7.jpg">
              		<br> Now do the Dougie "Fresh!" This move is signature for all styles of Dougie. <br>Bring your hand over the top of your head and slide it off the back, like you're slicking your hair down. <br>Greasing the mullet, if you will. Do this with the side-to-side move, shifting your shoulders side to side, <br>then do it with the other hand. Vary your levels with this move too.</li>
              	</div>
              	<br><br><br>
                   <br>
                   <h2>Step 8:</h2>
-             	<div id="eight"> <img src="Images/Image 8 Dougie.jpg">
+             	<div id="eight"> <img src="Images/Dougie 8.jpg">
              		<br> Don't forget to be loose with your knees. Otherwise you're going to look very stiff! <br>That is not how you want the dance to look -- it's all about feeling the beat and flowing with the motion of the music. <br>It helps to shake around and let your arms and legs feel free before dancing, just to get in the groove. <br>Add your own personal flair to the dance as well. Basically, just have fun!</li>
              	</div>
              	<br><br><br>
