--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <ul>
     	<li><a href="http://barocio11.github.io/interactivemedia323/Exercise 1/">Exercise 1</a></li>
     	<li><a href="http://barocio11.github.io/interactivemedia323/Exercise 2/">Exercise 2a</a></li>
-      <li><a href="exercise2b">Exercise 2b</a></li>
+      <li><a href="http://barocio11.github.io/interactivemedia323/Exercise3/">Exercise 3</a></li>
     </ul>
   </p>
 
