--- a/Exercise3/index.html
+++ b/Exercise3/index.html
@@ -1,21 +1,70 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-body {
-      background-color: #AFEEEE;
-}
-.after-box {
-    clear: left;
-    border: 1px solid white;
-    background-color: white;
-    height: 50px;      
-}
-</style>
-</head>
-<body>
-
-<div class="after-box">...</div>
-
-</body>
+	<head>
+		<link type="text/css" rel="stylesheet" href="index.css"/>
+		<title>Result</title>
+	</head>
+	<body>
+		<div class="heading">
+			<div id="Icon">
+				<div id="Home">
+					<div id="About">
+						<div id="Language"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="Heading"></div>
+		<br>
+		<div class="Log">
+				<div id="email">
+					<div id="password">
+						<div id="button"></div>
+				</div>
+			</div>
+		</div>
+		<br>
+		<div id="Intro"></div>
+		<br>
+		<div class="Sign">
+			<div id="name">
+				<div id="mail">
+					<div id="pass">
+						<div id="sbutton"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<br>
+		<div id="title"></div>
+		<br>
+		<div id="credit"></div>
+		<br>
+		<div id="date"></div>
+		<br>
+		<div id="block1"></div>
+		<br>
+		<div id="block2"></div>
+		<br>
+		<div id="block3"></div>
+		<br>
+		<div id="block4"></div>
+		<br>
+		<div id="block5"></div>
+		<br>
+		<div id="block6"></div>
+		<br>
+		<div id="block7"></div>
+		<br>
+		<div id="block8"></div>
+		<br>
+		<div id="block9"></div>
+		<br>
+		<div id="block10"></div>
+		<br>
+		<div id="block11"></div>
+		<br>
+		<div id="block12"></div>
+		
+	</body>
 </html>
