--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -10,7 +10,7 @@
 <p>
     Exercises:
     <ul>
-    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 1">level 1</a></li>
+    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 1/level 1">level 1</a></li>
     	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/1-2">level 1-2</a></li>
     	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/1-3">level 1-3</a></li>
     	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/1-4">level 1-4</a></li>
