--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -10,21 +10,21 @@
 <p>
     Exercises:
     <ul>
-    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 1/level 1">level 1</a></li>
-    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/1-2">level 1-2</a></li>
-    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/1-3">level 1-3</a></li>
-    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/1-4">level 1-4</a></li>
-    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/1-5">level 1-5</a></li>
-    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 2">level 2</a></li>
-    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/2-2">level 2-2</a></li>
-    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/2-3">level 2-3</a></li>
-    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/2-4">level 2-4</a></li>
-    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/2-5">level 2-5</a></li>
-      	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 3">level 3</a></li>
-      	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/3-2">level 3-2</a></li>
-      	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/3-3">level 3-3</a></li>
-      	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/3-4">level 3-4</a></li>
-      	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/3-5">level 3-5</a></li>
+    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 1/level 1-1">level 1</a></li>
+    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 1/level 1-2">level 1-2</a></li>
+    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 1/level 1-3">level 1-3</a></li>
+    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 1.level 1-4">level 1-4</a></li>
+    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 1/level 1-5">level 1-5</a></li>
+    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 2/level 2-1">level 2</a></li>
+    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 2/level 2-2">level 2-2</a></li>
+    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 2/level 2-3">level 2-3</a></li>
+    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 2/level 2-4">level 2-4</a></li>
+    	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 2/level 2-5">level 2-5</a></li>
+      	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 3/level 3-1">level 3</a></li>
+      	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 3/level 3-2">level 3-2</a></li>
+      	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 3/level 3-3">level 3-3</a></li>
+      	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 3/level 3-4">level 3-4</a></li>
+      	<li><a href="http://barocio11.github.io/interactivemedia323/Project 2/level 3/level 3-5">level 3-5</a></li>
     </ul>
   </p>
 </body>
