--- a/Project 2/level 5/level 5-3.html
+++ b/Project 2/level 5/level 5-3.html
@@ -6,22 +6,16 @@
 </head>
 
 <body>
-<div>Happy as something unimportant <br>   
-and free as a thing unimportant. <br>  
-As something no one prizes <br>
-and which does not prize itself. <br> 
-As something mocked by all <br>
-and which mocks at their mockery.  <br> 
-As laughter without serious reason. <br>  
-As a yell able to outyell itself. <br> 
-Happy as no matter what, <br>
-as any no matter what. <br>
-<br>
-Happy<br>
-as a dog’s tail.</div>
+<div><b>Happy as something unimportant &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and free as a thing unimportant</b>.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>As something no one prizes&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and which does not prize itself.</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As something mocked by all &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and which mocks at their mockery. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>As laughter without serious reason.</em>&nbsp;&nbsp;&nbsp;&nbsp;<b>As a yell able to outyell itself.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Happy as no matter what,&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;as any no matter what.</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Happy&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;as a dog’s tail.</div>
 </body>
 <style>
-div { width: 200px; height:100px; margin-top:180px; transform-origin:200% center; position:relative; animation:rotate 3s linear infinite; }
+div { width: 200px; height:100px; margin-top:180px; margin-left:1000px; transform-origin:200% right; position:relative; animation:rotate 3s linear infinite;  padding: 40px;
+  font-size: 75px;
+  font-family: 'Monoton', arial;
+  text-align: left;
+  text-transform: uppercase;
+  text-shadow: 0 0 80px red,0 0 30px FireBrick,0 0 6px DarkRed;
+  color: red;  }
 div:before { content:''; position:absolute; height:100%; width:100%; animation:rotate 3s linear reverse infinite; }
 @keyframes rotate { 100% { transform:rotate(-360deg); } }
 
