--- a/Project 2/level 5/level 5-5.html
+++ b/Project 2/level 5/level 5-5.html
@@ -20,7 +20,15 @@ as a dog’s tail.</div>
 </body>
 
 <style>
-div { width: 200px; height:100px; margin-top:180px; transform-origin:100% left; position:relative; animation:rotate 360s linear infinite; }
+body {
+	background-color: black;
+}
+div { width: 200px; height:100px; margin-top:180px; transform-origin:100% left; position:relative; animation:rotate 360s linear infinite; font-size: 75px;
+  font-family: 'Monoton', arial;
+  text-align: left;
+  text-transform: uppercase;
+  text-shadow: 0 0 80px blue,0 0 30px FireBrick,0 0 6px blue;
+  color: blue;}
 
 div:nth-of-type(1) { content:''; position:relative; height:100%; width:100%; animation:rotate 3s linear reverse infinite; }
 @keyframes rotate { 100% { transform:rotate(-360deg); } }
