--- a/Project 2/level 4/level 4-1.html
+++ b/Project 2/level 4/level 4-1.html
@@ -7,61 +7,87 @@
     </head>
 <body>
 <div id="a">
-    Happy as something unimportant
+    Happy as
 </div>
-
+<br>
 <div id="b">
-    and free as a thing unimportant
+    something
 </div>
-
-<div id="a">
-    as something no one prizes
-</div>
-
+<br>
 <div id="c">
-    and which does not prize itself
+    unimportant
 </div>
-
+<br>
 <div id="d">
-    as something mocked by all
+    and free as a thing
 </div>
-
-<div id="c">
+<br>
+<div id="e">
+    Unimportant.
+</div>
+<br>
+<div id="f">
+    As
+</div>
+<br>
+<div id="g">
+    something no one prizes 
+</div>
+<br>
+<div id="h">
+  and which does not prize itself
+</div>
+<br>
+<div id="i">
+    As
+</div>
+<br>
+<div id="j">
+    something mocked by all
+</div>
+<br>
+<div id="k">
     and which mocks at their mockery
 </div>
-
-<div id="d">
-    as laughter without serious reason 
+<br>
+<div id="l">
+    As
 </div>
-
-<div id="e">
-    as a yell able to outyell itself
-    <br>
-    happy as no matter what
-    <br>
+<br>
+<div id="m">
+    laughter without serious reason
+</div>
+<br>
+<div id="n">
+    a yellable to out yell itself
+</div>
+<br>
+<div id="o">
+    Happy as no matter what.
+</div>
+<br>
+<div id="p">
     as any no matter what
 </div>
-
-<div id="f">
-    Happy
+<br>
+<div id="q">
+    Happy as a
 </div>
-
-<div id="g">
-    as a dog's tail
+<br>
+<div id="r">
+    dog's tail
 </div>
-
-
 
 <style>
 #a {
     position: relative;
     padding: 5px;
     top: 20px;
+    left: 660px;
     font-style: uppercase;
     font-family: times;
-    width: 100%;
-    font-size: 60px;
     line-height: -100%;
+    font-size: 20px;
     text-align: left;
     display: inline-block;
 }
@@ -69,11 +95,10 @@
 #b {
     position: relative;
     padding: 5px;
-    top: 20px;
+    top: 10px;
+    left: 620px;
     font-style: uppercase;
     font-family: arial;
-    letter-spacing: 10px;
-    width: 100%;
     font-size: 30px;
     line-height: -100%;
     text-align: left;
@@ -81,71 +106,210 @@
 }
 
 #c {
-    position: relative;
+   position: relative;
     padding: 5px;
-    top: 20px;
+    top: 0px;
+    left: 520px;
     font-style: uppercase;
-    font-family: cursive;
-    letter-spacing: -2px;
-    width: 100%;
-    font-size: 30px;
-    line-height: 70%;
-    text-align: right;
+    font-family: arial;
+    font-size: 70px;
+    line-height: -100%;
+    text-align: left;
     display: inline-block;
 }
 
 #d {
     position: relative;
     padding: 5px;
-    top: 20px;
+    top: -20px;
+    left: 360px;
     font-style: uppercase;
     font-family: arial;
-    letter-spacing: -5px;
-    width: 100%;
-    font-size: 50px;
-    line-height: 50%;
-    text-align: right;
+    font-size: 80px;
+    line-height: -100%;
+    text-align: left;
     display: inline-block;
 }
 
 #e {
     position: relative;
     padding: 5px;
-    top: 20px;
+    top: -30px;
+    left: 620px;
     font-style: uppercase;
     font-family: arial;
-    letter-spacing: -5px;
-    width: 100%;
-    font-size: 200px;
-    line-height: 60%;
-    text-align: right;
+    font-size: 60px;
+    line-height: -100%;
+    text-align: left;
     display: inline-block;
 }
 
 #f {
     position: relative;
     padding: 5px;
-    top: 20px;
+    top: -130px;
+    left: 980px;
     font-style: uppercase;
-    font-family: cursive;
-    width: 100%;
-    font-size: 100px;
-    line-height: 500%;
-    text-align: center;
+    font-family: arial;
+    font-size: 160px;
+    line-height: -100%;
+    text-align: left;
     display: inline-block;
 }
 
 #g {
     position: relative;
     padding: 5px;
-    top: 20px;
+    top: -245px;
+    left: 200px;
     font-style: uppercase;
-    font-family: times;
-    letter-spacing: 0px;
-    width: 100%;
-    font-size: 50px;
+    font-family: arial;
+    font-size: 70px;
     line-height: -100%;
-    text-align: center;
+    text-align: left;
+    display: inline-block;
+}
+
+#h {
+    position: relative;
+    padding: 5px;
+    top: -270px;
+    left: 140px;
+    font-style: uppercase;
+    font-family: arial;
+    font-size: 80px;
+    line-height: -100%;
+    text-align: left;
+    display: inline-block;
+}
+
+#i {
+    position: relative;
+    padding: 5px;
+    top: -320px;
+    left: 60px;
+    font-style: uppercase;
+    font-family: arial;
+    font-size: 200px;
+    line-height: -100%;
+    text-align: left;
+    display: inline-block;
+}
+
+#j {
+    position: relative;
+    padding: 5px;
+    top: -540px;
+    left: 310px;
+    font-style: uppercase;
+    font-family: arial;
+    font-size: 90px;
+    line-height: -100%;
+    text-align: left;
+    display: inline-block;
+}
+
+#k {
+    position: relative;
+    padding: 5px;
+    top: -550px;
+    left: 310px;
+    font-style: uppercase;
+    font-family: arial;
+    font-size: 70px;
+    line-height: -100%;
+    text-align: left;
+    display: inline-block;
+}
+
+#l {
+    position: relative;
+    padding: 5px;
+    top: -610px;
+    left: 60px;
+    font-style: uppercase;
+    font-family: arial;
+    font-size: 200px;
+    line-height: -100%;
+    text-align: left;
+    display: inline-block;
+}
+
+#m {
+    position: relative;
+    padding: 5px;
+    top: -820px;
+    left: 310px;
+    font-style: uppercase;
+    font-family: arial;
+    font-size: 75px;
+    line-height: -100%;
+    text-align: left;
+    display: inline-block;
+}
+
+#n {
+    position: relative;
+    padding: 5px;
+    top: -840px;
+    left: 310px;
+    font-style: uppercase;
+    font-family: arial;
+    font-size: 90px;
+    line-height: -100%;
+    text-align: left;
+    display: inline-block;
+}
+
+#o {
+    position: relative;
+    padding: 5px;
+    top: -850px;
+    left: 200px;
+    font-style: uppercase;
+    font-family: arial;
+    font-size: 80px;
+    line-height: -100%;
+    text-align: left;
+    display: inline-block;
+}
+
+#p {
+    position: relative;
+    padding: 5px;
+    top: -870px;
+    left: 300px;
+    font-style: uppercase;
+    font-family: arial;
+    font-size: 70px;
+    line-height: -100%;
+    text-align: left;
+    display: inline-block;
+}
+
+#q {
+    position: relative;
+    padding: 5px;
+    top: -890px;
+    left: 480px;
+    font-style: uppercase;
+    font-family: arial;
+    font-size: 70px;
+    line-height: -100%;
+    text-align: left;
+    display: inline-block;
+}
+
+#r {
+    position: relative;
+    padding: 5px;
+    top: -890px;
+    left: 620px;
+    font-style: uppercase;
+    font-family: arial;
+    font-size: 20px;
+    line-height: -100%;
+    text-align: left;
     display: inline-block;
 }
 
