--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -154,11 +154,18 @@
 <a href # "top"> Back to top </a>
 </div>
 
+<div class="Poem"><b>Happy as a Dog's Tail</b><br>BY ANNA SWIR<br><br>Happy as something unimportant<br>and free as a thing unimportant.<br>As something no one prizes<br>and which does not prize itself.<br>As something mocked by all<br>and which mocks at their mockery.   <br>As laughter without serious reason.   <br>As a yell able to outyell itself.   <br>Happy as no matter what,<br>as any no matter what.<br><br>Happy<br>as a dog's tail.</div>
+
 </body>
  <style>
+
+ body {
+  background-color: black;
+ }
+
 .Project {
   font-size: 150px;
-  font-family: avenir; color: black;
+  font-family: avenir; color: white;
 }
 
 .home {
@@ -173,16 +180,17 @@
   border-radius: 400px;
   height: 400px;
   width: 400px;
-  border-color: 1px solid black;
-  background-color: black;
+  background-color: white;
   text-align: center;
   font-size: 60px;
   text-decoration: none;
+  text-shadow: 0 0 80px blue,0 0 30px blue,0 0 6px blue;
+  color: blue;
 }
 
 .level1 {
   position: relative;
-  font-family: avenir; color: white;
+  font-family: avenir; color: black;
   font-size: 350px;
   right: 80px;
 
@@ -193,7 +201,7 @@
   height: 80px;
   width: 80px;
   border-color: 1px solid black;
-  background-color: white;
+  background-color: black;
   text-align: center;
   font-family: avenir;
   font-size: 60px; color: white;
@@ -201,6 +209,7 @@
   position: relative;
   left: 180px;
   top: -460px;
+
 }
 
 .circle1-2 {
@@ -208,7 +217,7 @@
   height: 80px;
   width: 80px;
   border-color: 1px solid black;
-  background-color: white;
+  background-color: black;
   text-align: center;
   font-family: avenir;
   font-size: 60px; color: white;
@@ -223,7 +232,7 @@
   height: 80px;
   width: 80px;
   border-color: 1px solid black;
-  background-color: white;
+  background-color: black;
   text-align: center;
   font-family: avenir;
   font-size: 60px; color: white;
@@ -238,7 +247,7 @@
   height: 80px;
   width: 80px;
   border-color: 1px solid black;
-  background-color: white;
+  background-color: black;
   text-align: center;
   font-family: avenir;
   font-size: 60px; color: white;
@@ -253,10 +262,10 @@
   height: 80px;
   width: 80px;
   border-color: 1px solid black;
-  background-color: white;
+  background-color: black;
   text-align: center;
   font-family: avenir;
-  font-size: 60px; color: white;
+  font-size: 60px; color: black;
   text-decoration: none;
   position: relative;
   left: 180px;
@@ -267,12 +276,19 @@
 position: relative;
 left: 500px;
 bottom: 300px;
+color: blue;
+text-shadow: 0 0 80px blue,0 0 30px blue,0 0 6px blue;
+color: blue;
 }
 
 .type2 {
 position: relative;
 left: 850px;
 bottom: 450px;
+color: blue;
+text-shadow: 0 0 80px blue,0 0 30px blue,0 0 6px blue;
+color: blue;
+
 }
 
 .links2 {
@@ -287,7 +303,9 @@ bottom: 450px;
   text-decoration: none;
   bottom: 300px;
   left: 850px;
-  
+  text-shadow: 0 0 80px red,0 0 30px red,0 0 6px red;
+  color: red;
+
 }
 
 .level2 {
@@ -378,12 +396,18 @@ bottom: 450px;
 position: relative;
 bottom: 600px;
 left: 20px;
+color: red;
+text-shadow: 0 0 80px red,0 0 30px red,0 0 6px red;
+color: red;
 }
 
 .type4 {
 position: relative;
 left: 370px;
 bottom: 750px;
+color: red;
+text-shadow: 0 0 80px red,0 0 30px red,0 0 6px red;
+color: red;
 }
 
 .links3 {
@@ -404,7 +428,8 @@ bottom: 750px;
   position: relative;
   font-family: avenir; color: white;
   font-size: 320px;
-  right: 80px;
+  right: 80px;  text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+  color: green;
 
 }
 
@@ -413,7 +438,7 @@ bottom: 750px;
   height: 80px;
   width: 80px;
   border-color: 1px solid black;
-  background-color: white;
+  background-color: black;
   text-align: center;
   font-family: avenir;
   font-size: 60px; color: white;
@@ -421,6 +446,8 @@ bottom: 750px;
   position: relative;
   left: 180px;
   top: -420px;
+  text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+  color: green;
 }
 
 .circle3-2 {
@@ -428,7 +455,7 @@ bottom: 750px;
   height: 80px;
   width: 80px;
   border-color: 1px solid black;
-  background-color: white;
+  background-color: black;
   text-align: center;
   font-family: avenir;
   font-size: 60px; color: white;
@@ -436,6 +463,9 @@ bottom: 750px;
   position: relative;
   left: 270px;
   top: -450px;
+  text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+  color: green;
+
 }
 
 .circle3-3 {
@@ -443,7 +473,7 @@ bottom: 750px;
   height: 80px;
   width: 80px;
   border-color: 1px solid black;
-  background-color: white;
+  background-color: black;
   text-align: center;
   font-family: avenir;
   font-size: 60px; color: white;
@@ -451,6 +481,9 @@ bottom: 750px;
   position: relative;
   left: 310px;
   top: -440px;
+  text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+  color: green;
+
 }
 
 .circle3-4 {
@@ -458,7 +491,7 @@ bottom: 750px;
   height: 80px;
   width: 80px;
   border-color: 1px solid black;
-  background-color: white;
+  background-color: black;
   text-align: center;
   font-family: avenir;
   font-size: 60px; color: white;
@@ -466,6 +499,9 @@ bottom: 750px;
   position: relative;
   left: 270px;
   top: -430px;
+  text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+  color: green;
+
 }
 
 .circle3-5 {
@@ -473,7 +509,7 @@ bottom: 750px;
   height: 80px;
   width: 80px;
   border-color: 1px solid black;
-  background-color: white;
+  background-color: black;
   text-align: center;
   font-family: avenir;
   font-size: 60px; color: white;
@@ -481,18 +517,27 @@ bottom: 750px;
   position: relative;
   left: 180px;
   top: -450px;
+  text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+  color: green;
+
 }
 
 .type5 {
 position: relative;
 left: 500px;
 bottom: 900px;
+color: green;
+text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+color: green;
 }
 
 .type6 {
 position: relative;
 left: 850px;
 bottom: 1050px;
+color: green;
+text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+color: green;
 }
 
 .links4 {
@@ -501,20 +546,24 @@ bottom: 1050px;
   height: 400px;
   width: 400px;
   border-color: 1px solid black;
-  background-color: black;
+  background-color: yellow;
   text-align: center;
   font-size: 60px;
   text-decoration: none;
   bottom: 900px;
   left: 850px;
+  text-shadow: 0 0 80px yellow,0 0 30px yellow,0 0 6px yellow;
+  color: yellow;
   
 }
 
 .level4 {
   position: relative;
-  font-family: avenir; color: white;
+  font-family: avenir; color: black;
   font-size: 320px;
   right: 80px;
+  text-shadow: 0 0 80px yellow,0 0 30px yellow,0 0 6px yellow;
+  
 
 }
 
@@ -523,10 +572,10 @@ bottom: 1050px;
   height: 80px;
   width: 80px;
   border-color: 1px solid black;
-  background-color: white;
+  background-color: black;
   text-align: center;
   font-family: avenir;
-  font-size: 60px; color: white;
+  font-size: 60px; color: black;
   text-decoration: none;
   position: relative;
   left: 180px;
@@ -538,7 +587,7 @@ bottom: 1050px;
   height: 80px;
   width: 80px;
   border-color: 1px solid black;
-  background-color: white;
+  background-color: black;
   text-align: center;
   font-family: avenir;
   font-size: 60px; color: white;
@@ -553,7 +602,7 @@ bottom: 1050px;
   height: 80px;
   width: 80px;
   border-color: 1px solid black;
-  background-color: white;
+  background-color: black;
   text-align: center;
   font-family: avenir;
   font-size: 60px; color: white;
@@ -568,7 +617,7 @@ bottom: 1050px;
   height: 80px;
   width: 80px;
   border-color: 1px solid black;
-  background-color: white;
+  background-color: black;
   text-align: center;
   font-family: avenir;
   font-size: 60px; color: white;
@@ -583,7 +632,7 @@ bottom: 1050px;
   height: 80px;
   width: 80px;
   border-color: 1px solid black;
-  background-color: white;
+  background-color: black;
   text-align: center;
   font-family: avenir;
   font-size: 60px; color: white;
@@ -597,12 +646,18 @@ bottom: 1050px;
 position: relative;
 left: 20px;
 bottom: 1200px;
+color: yellow;
+text-shadow: 0 0 80px yellow,0 0 30px yellow,0 0 6px yellow;
+color: yellow;
 }
 
 .type8 {
 position: relative;
 left: 370px;
 bottom: 1350px;
+color: yellow;
+text-shadow: 0 0 80px yellow,0 0 30px yellow,0 0 6px yellow;
+color: yellow;
 }
 
 .links5 {
@@ -611,11 +666,14 @@ bottom: 1350px;
   height: 400px;
   width: 400px;
   border-color: 1px solid black;
-  background-color: black;
+  background-color: #FF00FF;
   text-align: center;
   font-size: 60px;
   text-decoration: none;
   bottom: 1200px;
+  color: yellow;
+  text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+  color: #FF00FF;
   
 }
 
@@ -625,6 +683,7 @@ bottom: 1350px;
   font-size: 320px;
   right: 80px;
   top: 10px;
+  text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
 
 }
 
@@ -707,12 +766,26 @@ bottom: 1350px;
 position: relative;
 left: 500px;
 bottom: 1475px;
+color: #FF00FF
+text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+color: #FF00FF;
+
 }
 
 .type10 {
 position: relative;
 left: 850px;
 bottom: 1600px;
+text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+color: #FF00FF;
+
+}
+
+.Poem {
+  position: relative;
+  font-size: 50px;
+  color: white;
+  bottom: 1200px;
 }
 
 .top {
