--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -10,7 +10,7 @@
     <div=class="header">
     <div class="Project">PROJECT 2</div>
     <div class="home">
-      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Home</a>
+      <a href="http://barocio11.github.io/interactivemedia323">Home</a>
     </div>
     </div>
 
