--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -161,6 +161,10 @@
 
  body {
   background-color: black;
+  }
+a:hover{
+  color: black;
+}
  }
 
 .Project {
@@ -176,7 +180,7 @@
 }
 
 .links1 {
-  position: relative;
+  position: relative; 
   border-radius: 400px;
   height: 400px;
   width: 400px;
@@ -189,10 +193,11 @@
 }
 
 .level1 {
-  position: relative;
+  position: relative; 
   font-family: avenir; color: black;
   font-size: 350px;
   right: 80px;
+
 
 }
 
@@ -209,6 +214,7 @@
   position: relative;
   left: 180px;
   top: -460px;
+
 
 }
 
@@ -766,7 +772,7 @@ color: yellow;
 position: relative;
 left: 500px;
 bottom: 1475px;
-color: #FF00FF
+color: #FF00FF;
 text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
 color: #FF00FF;
 
@@ -792,6 +798,8 @@ color: #FF00FF;
   position: relative;
   text-align: center;
 }
+
+
 
 
 </html>
