--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -161,11 +161,11 @@
 
  body {
   background-color: black;
-  }
+ }
+
 a:hover{
   color: black;
 }
- }
 
 .Project {
   font-size: 150px;
@@ -789,9 +789,12 @@ color: #FF00FF;
 
 .Poem {
   position: relative;
-  font-size: 50px;
+  font-size: 30px;
+  font-family: avenir;
   color: white;
   bottom: 1200px;
+  right: 100px;
+  text-align: center;
 }
 
 .top {
