--- a/Project 2/level 3/level 3-5.html
+++ b/Project 2/level 3/level 3-5.html
@@ -7,6 +7,18 @@
 
 <body>
 
+ 	<div class="Previous"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 3/level 3-4">Previous</a>
+      </div>
+
+	<div class="Home"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Home</a>
+      </div>
+
+    <div class="Next"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 4/level 4-1">Next</a>
+      </div>
+
 <p><h1>Happy as &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; something</h1></p>
 <p><h1>unimportant &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; and free</h1></p>
 <p><h1>as a thing &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; unimportant</h1></p>
@@ -19,5 +31,39 @@
 <p><h1>what happy as &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; a dog's tail</h1></p>
 
 </body>
+
+<style>
+
+a:hover{
+  color: black;
+  }
+
+.Previous {
+	position: relative;
+	color: green;
+	text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+	color: green;
+	font-size: 20px;
+}
+
+.Home {
+	position: relative;
+	color: green;
+	text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+	color: green;
+	font-size: 20px;
+	text-align: center;
+	bottom: 20px;
+}
+
+.Next {
+	position: relative;
+	color: green;
+	text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+	color: green;
+	font-size: 20px;
+	text-align: right;
+	bottom: 40px;
+}
 
 </html>
