--- a/Project 2/level 5/level 5-1.html
+++ b/Project 2/level 5/level 5-1.html
@@ -8,6 +8,20 @@
 <body>
 
 <div>
+
+      <div class="Previous"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 4/level 4-5">Previous</a>
+      </div>
+
+    <div class="Home"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Home</a>
+      </div>
+
+    <div class="Next"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 5/level 5-2">Next</a>
+      </div>
+
+
   <p id="error">Happy as something unimportant <br> and free as a thing unimportant<span><br>As something no one prizes <br> and which does not prize itself</span><br>As something mocked by all <br> and which mocks at their mockery</p>
   <p id="code">As laughter without serious reason <br> As a yell able to outyell itself<span><br> Happy as no matter <br> as any no matter what </span><span><br>Happy <br> as a dog's tail</span></p>
 
@@ -58,4 +72,37 @@ div p { margin:0; }
     opacity:0.4; text-shadow: none; 
   }
 }
+
+a:hover{
+  color: black;
+  }
+
+.Previous {
+    position: relative;
+    color: #FF00FF;
+    text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+    color: #FF00FF;
+    font-size: 20px;
+}
+
+.Home {
+    position: relative;
+    color: #FF00FF;
+    text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+    color: #FF00FF;
+    font-size: 20px;
+    text-align: center;
+    bottom: 20px;
+}
+
+.Next {
+    position: relative;
+    color: #FF00FF;
+    text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+    color: #FF00FF;
+    font-size: 20px;
+    text-align: right;
+    bottom: 40px;
+}
+
 </html>
