--- a/Project 2/level 5/level 5-3.html
+++ b/Project 2/level 5/level 5-3.html
@@ -6,6 +6,20 @@
 </head>
 
 <body>
+
+      <div class="Previous"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 5/level 5-2">Previous</a>
+      </div>
+
+    <div class="Home"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Home</a>
+      </div>
+
+    <div class="Next"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 5/level 5-4">Next</a>
+      </div>
+
+
 <div><b>Happy as something unimportant &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and free as a thing unimportant</b>.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>As something no one prizes&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and which does not prize itself.</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As something mocked by all &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and which mocks at their mockery. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>As laughter without serious reason.</em>&nbsp;&nbsp;&nbsp;&nbsp;<b>As a yell able to outyell itself.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Happy as no matter what,&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;as any no matter what.</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Happy&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;as a dog’s tail.</div>
 </body>
 <style>
@@ -18,5 +32,37 @@ div { width: 200px; height:100px; margin-top:180px; margin-left:1000px; transfor
   color: red;  }
 div:before { content:''; position:absolute; height:100%; width:100%; animation:rotate 3s linear reverse infinite; }
 @keyframes rotate { 100% { transform:rotate(-360deg); } }
+
+a:hover{
+  color: black;
+  }
+
+.Previous {
+    position: relative;
+    color: #FF00FF;
+    text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+    color: #FF00FF;
+    font-size: 20px;
+}
+
+.Home {
+    position: relative;
+    color: #FF00FF;
+    text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+    color: #FF00FF;
+    font-size: 20px;
+    text-align: center;
+    bottom: 20px;
+}
+
+.Next {
+    position: relative;
+    color: #FF00FF;
+    text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+    color: #FF00FF;
+    font-size: 20px;
+    text-align: right;
+    bottom: 40px;
+}
 
 </html>
