--- a/Project 2/level 5/level 5-4.html
+++ b/Project 2/level 5/level 5-4.html
@@ -9,6 +9,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+      <div class="Previous"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 5/level 5-3">Previous</a>
+      </div>
+
+    <div class="Home"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Home</a>
+      </div>
+
+    <div class="Next"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 5/level 5-5">Next</a>
+      </div>
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>level 5-4</title>
@@ -85,10 +98,11 @@
   height: 360px;
   width: 360px;
   padding: 20px;
-  background-color: rgba(50, 50, 50, 0.7);
+  background-color: red(50, 50, 50, 0.7);
   font-size: 27px;
   line-height: 1em;
-  color: #fff;
+  color: #FF00FF;
+  text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
   border: 1px solid white;
   border-radius: 3px;
   text-align: center;
@@ -129,4 +143,37 @@
   -moz-transform: rotateX(-90deg) rotate(180deg) translateZ(200px);
   transform: rotateX(-90deg) rotate(180deg) translateZ(200px);
 }
+
+a:hover{
+  color: black;
+  }
+
+.Previous {
+    position: relative;
+    color: #FF00FF;
+    text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+    color: #FF00FF;
+    font-size: 20px;
+}
+
+.Home {
+    position: relative;
+    color: #FF00FF;
+    text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+    color: #FF00FF;
+    font-size: 20px;
+    text-align: center;
+    bottom: 20px;
+}
+
+.Next {
+    position: relative;
+    color: #FF00FF;
+    text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+    color: #FF00FF;
+    font-size: 20px;
+    text-align: right;
+    bottom: 40px;
+}
+
 </html>
