--- a/Project 2/level 1/level 1-1.html
+++ b/Project 2/level 1/level 1-1.html
@@ -6,6 +6,20 @@
 </head>
 
 <body>
+
+	  <div class="Previous"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 1/level 1-1">Previous</a>
+      </div>
+
+	<div class="Home"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Home</a>
+      </div>
+
+    <div class="Next"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 1/level 1-2">Next</a>
+      </div>
+
+
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; and</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; free</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; as</p>
@@ -49,5 +63,39 @@
  
 <p>Happy as a dog's tail.</p>
 </body>
+
+<style>
+
+a:hover{
+  color: black;
+  }
+
+.Previous {
+	position: relative;
+	color: blue;
+	text-shadow: 0 0 80px blue,0 0 30px blue,0 0 6px blue;
+	color: blue;
+	font-size: 20px;
+}
+
+.Home {
+	position: relative;
+	color: blue;
+	text-shadow: 0 0 80px blue,0 0 30px blue,0 0 6px blue;
+	color: blue;
+	font-size: 20px;
+	text-align: center;
+	bottom: 20px;
+}
+
+.Next {
+	position: relative;
+	color: blue;
+	text-shadow: 0 0 80px blue,0 0 30px blue,0 0 6px blue;
+	color: blue;
+	font-size: 20px;
+	text-align: right;
+	bottom: 40px;
+}
 
 </html>
