--- a/Project 2/level 1/level 1-2.html
+++ b/Project 2/level 1/level 1-2.html
@@ -6,6 +6,19 @@
 </head>
 
 <body>
+                 
+  	<div class="Previous"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 1/level 1-1">Previous</a>
+      </div>
+
+	<div class="Home"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Home</a>
+      </div>
+
+    <div class="Next"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 1/level 1-3">Next</a>
+      </div>
+
 <p>&nbsp;&nbsp;&nbsp;Happy&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;as</p>
 <p>something&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;unimportant</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;free</p>
@@ -21,4 +34,37 @@
 <p>&nbsp;&nbsp;&nbsp;their&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;mockery</p>
 </body>
 
+<style>
+
+a:hover{
+  color: black;
+  }
+
+.Previous {
+	position: relative;
+	color: blue;
+	text-shadow: 0 0 80px blue,0 0 30px blue,0 0 6px blue;
+	color: blue;
+	font-size: 20px;
+}
+
+.Home {
+	position: relative;
+	color: blue;
+	text-shadow: 0 0 80px blue,0 0 30px blue,0 0 6px blue;
+	color: blue;
+	font-size: 20px;
+	text-align: center;
+	bottom: 20px;
+}
+
+.Next {
+	position: relative;
+	color: blue;
+	text-shadow: 0 0 80px blue,0 0 30px blue,0 0 6px blue;
+	color: blue;
+	font-size: 20px;
+	text-align: right;
+	bottom: 40px;
+}
 </html>
