--- a/Project 2/level 1/level 1-4.html
+++ b/Project 2/level 1/level 1-4.html
@@ -6,6 +6,19 @@
 </head>
 
 <body>
+
+	<div class="Previous"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 1/level 1-3">Previous</a>
+      </div>
+
+	<div class="Home"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Home</a>
+      </div>
+
+    <div class="Next"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 1/level 1-5">Next</a>
+      </div>
+
 <p>Happy as</p>
 <p>something unimportant</p>
 <p>and free as a thing</p>
@@ -27,5 +40,39 @@
 <p>n&nbsp;o&nbsp; m&nbsp;a&nbsp;t&nbsp;t&nbsp;e&nbsp;r</p>
 <p>w&nbsp;h&nbsp;a&nbsp;t</p>
 </body>
+
+<style>
+
+a:hover{
+  color: black;
+  }
+
+.Previous {
+	position: relative;
+	color: blue;
+	text-shadow: 0 0 80px blue,0 0 30px blue,0 0 6px blue;
+	color: blue;
+	font-size: 20px;
+}
+
+.Home {
+	position: relative;
+	color: blue;
+	text-shadow: 0 0 80px blue,0 0 30px blue,0 0 6px blue;
+	color: blue;
+	font-size: 20px;
+	text-align: center;
+	bottom: 20px;
+}
+
+.Next {
+	position: relative;
+	color: blue;
+	text-shadow: 0 0 80px blue,0 0 30px blue,0 0 6px blue;
+	color: blue;
+	font-size: 20px;
+	text-align: right;
+	bottom: 40px;
+}
 
 </html>
