--- a/Project 2/level 2/level 2-1.html
+++ b/Project 2/level 2/level 2-1.html
@@ -6,6 +6,19 @@
 </head>
 
 <body>
+
+	<div class="Previous"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 1/level 1-1">Previous</a>
+      </div>
+
+	<div class="Home"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Home</a>
+      </div>
+
+    <div class="Next"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 1/level 1-3">Next</a>
+      </div>
+
 Happy as something <br> <ol><ol><ol><ol><ol><ol><ol><ol><h1>UNIMPORTANT</h1></ol></ol></ol></ol></ol></ol></ol></ol>
 and free as a thing
 <br>
@@ -35,4 +48,39 @@ and free as a thing
 
 <h1>Happy as a dog's tail.</h1>
 </body>
+
+<style>
+
+a:hover{
+  color: black;
+  }
+
+.Previous {
+	position: relative;
+	color: red;
+	text-shadow: 0 0 80px red,0 0 30px red,0 0 6px red;
+	color: red;
+	font-size: 20px;
+}
+
+.Home {
+	position: relative;
+	color: red;
+	text-shadow: 0 0 80px red,0 0 30px red,0 0 6px red;
+	color: red;
+	font-size: 20px;
+	text-align: center;
+	bottom: 20px;
+}
+
+.Next {
+	position: relative;
+	color: red;
+	text-shadow: 0 0 80px red,0 0 30px red,0 0 6px red;
+	color: red;
+	font-size: 20px;
+	text-align: right;
+	bottom: 40px;
+}
+
 </html>
