--- a/Project 2/level 2/level 2-5.html
+++ b/Project 2/level 2/level 2-5.html
@@ -6,6 +6,19 @@
 </head>
 
 <body>
+
+	 <div class="Previous"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 2/level 2-4">Previous</a>
+      </div>
+
+	<div class="Home"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Home</a>
+      </div>
+
+    <div class="Next"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 3/level 3-1">Next</a>
+      </div>
+
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;H</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ap</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;pya</p>
@@ -29,5 +42,39 @@
 <p>ynomatterwhatHappyasadog'stail</p>
 
 </body>
+
+<style>
+
+a:hover{
+  color: black;
+  }
+
+.Previous {
+	position: relative;
+	color: red;
+	text-shadow: 0 0 80px red,0 0 30px red,0 0 6px red;
+	color: red;
+	font-size: 20px;
+}
+
+.Home {
+	position: relative;
+	color: red;
+	text-shadow: 0 0 80px red,0 0 30px red,0 0 6px red;
+	color: red;
+	font-size: 20px;
+	text-align: center;
+	bottom: 20px;
+}
+
+.Next {
+	position: relative;
+	color: red;
+	text-shadow: 0 0 80px red,0 0 30px red,0 0 6px red;
+	color: red;
+	font-size: 20px;
+	text-align: right;
+	bottom: 40px;
+}
 
 </html>
