--- a/Project 2/level 3/level 3-1.html
+++ b/Project 2/level 3/level 3-1.html
@@ -2,11 +2,23 @@
 <html>
 
 <head>
-<link type="text/css" rel="stylesheet" href="level.css"/>
   <title>level 3</title>
 </head>
 
 <body>
+
+	<div class="Previous"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 2/level 2-5">Previous</a>
+      </div>
+
+	<div class="Home"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Home</a>
+      </div>
+
+    <div class="Next"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 3/level 3-2">Next</a>
+      </div>
+
 <p class="one">
 	<ol><h1>Happy</h1></ol>
 	<ol><ol><h1> as </h1></ol></ol>
@@ -59,4 +71,45 @@
 
 Happy as a dog's tail
 </body>
+
+<style>
+
+p.one {
+    border-style: solid;
+    border-color: 
+}
+
+a:hover{
+  color: black;
+  }
+
+.Previous {
+	position: relative;
+	color: green;
+	text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+	color: green;
+	font-size: 20px;
+}
+
+.Home {
+	position: relative;
+	color: green;
+	text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+	color: green;
+	font-size: 20px;
+	text-align: center;
+	bottom: 20px;
+}
+
+.Next {
+	position: relative;
+	color: green;
+	text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+	color: green;
+	font-size: 20px;
+	text-align: right;
+	bottom: 40px;
+}
+
+
 </html>
