--- a/Project 2/level 3/level 3-3.html
+++ b/Project 2/level 3/level 3-3.html
@@ -6,6 +6,19 @@
 </head>
 
 <body>
+
+	 <div class="Previous"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 3/level 3-2">Previous</a>
+      </div>
+
+	<div class="Home"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Home</a>
+      </div>
+
+    <div class="Next"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 3/level 3-4">Next</a>
+      </div>
+
 <p><h1>H</h1></p>
 <p><h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;a</h1></p>
 <p><h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;p</h1></p>
@@ -112,5 +125,39 @@
 
 
 </body>
+
+<style>
+
+a:hover{
+  color: black;
+  }
+
+.Previous {
+	position: relative;
+	color: green;
+	text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+	color: green;
+	font-size: 20px;
+}
+
+.Home {
+	position: relative;
+	color: green;
+	text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+	color: green;
+	font-size: 20px;
+	text-align: center;
+	bottom: 20px;
+}
+
+.Next {
+	position: relative;
+	color: green;
+	text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+	color: green;
+	font-size: 20px;
+	text-align: right;
+	bottom: 40px;
+}
 
 </html>
