--- a/Project 2/level 3/level 3-4.html
+++ b/Project 2/level 3/level 3-4.html
@@ -7,6 +7,18 @@
 
 <body>
 
+ <div class="Previous"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 3/level 3-3">Previous</a>
+      </div>
+
+	<div class="Home"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Home</a>
+      </div>
+
+    <div class="Next"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 3/level 3-5">Next</a>
+      </div>
+
 <p><h1><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Happy as something unimportant &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; and free as a thing unimportant</em></h1></p>
 <p><h1><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;as something no one prizes &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; and which does not prize itself</em></h1></p>
 <p><h1><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;as something mocked by all &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; and which mocks at their mockery</em></h1></p>
@@ -15,5 +27,39 @@
 <p><h1><em>Happy &nbsp; as a dog's tail</em></h1></p>
 
 </body>
+
+<style>
+
+a:hover{
+  color: black;
+  }
+
+.Previous {
+	position: relative;
+	color: green;
+	text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+	color: green;
+	font-size: 20px;
+}
+
+.Home {
+	position: relative;
+	color: green;
+	text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+	color: green;
+	font-size: 20px;
+	text-align: center;
+	bottom: 20px;
+}
+
+.Next {
+	position: relative;
+	color: green;
+	text-shadow: 0 0 80px green,0 0 30px green,0 0 6px green;
+	color: green;
+	font-size: 20px;
+	text-align: right;
+	bottom: 40px;
+}
 
 </html>
