--- a/Project 2/level 4/level 4-1.html
+++ b/Project 2/level 4/level 4-1.html
@@ -6,6 +6,20 @@
         </title>
     </head>
 <body>
+
+    <div class="Previous"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 3/level 3-5">Previous</a>
+      </div>
+
+    <div class="Home"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Home</a>
+      </div>
+
+    <div class="Next"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 4/level 4-2">Next</a>
+      </div>
+
+
 <div id="a">
     Happy as
 </div>
@@ -311,6 +325,38 @@
     line-height: -100%;
     text-align: left;
     display: inline-block;
+}
+
+a:hover{
+  color: black;
+  }
+
+.Previous {
+    position: relative;
+    color: yellow;
+    text-shadow: 0 0 80px yellow,0 0 30px yellow,0 0 6px yellow;
+    color: yellow;
+    font-size: 20px;
+}
+
+.Home {
+    position: relative;
+    color: yellow;
+    text-shadow: 0 0 80px yellow,0 0 30px yellow,0 0 6px yellow;
+    color: yellow;
+    font-size: 20px;
+    text-align: center;
+    bottom: 20px;
+}
+
+.Next {
+    position: relative;
+    color: yellow;
+    text-shadow: 0 0 80px yellow,0 0 30px yellow,0 0 6px yellow;
+    color: yellow;
+    font-size: 20px;
+    text-align: right;
+    bottom: 40px;
 }
 
 </html>
