--- a/Project 2/level 5/level 5-2.html
+++ b/Project 2/level 5/level 5-2.html
@@ -6,6 +6,22 @@
 </head>
 
 <body>
+
+    <COMMENT>
+      <div class="Previous"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 5/level 5-1">Previous</a>
+      </div>
+
+    <div class="Home"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Home</a>
+      </div>
+
+    <div class="Next"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 5/level 5-3">Next</a>
+      </div>
+  </COMMENT>
+
+  
 <div>Happy as something unimportant <br> and free as a thing unimportant</div>
 <div>As something no one prizes <br> and which does not prize itself</b></div>
 <div>As something by all</div>
@@ -106,4 +122,37 @@ div:nth-of-type(1) {
   50% { left:25%; }
   100% { left:75%; }
 }
+
+a:hover{
+  color: black;
+  }
+
+.Previous {
+    position: relative;
+    color: #FF00FF;
+    text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+    color: #FF00FF;
+    font-size: 20px;
+}
+
+.Home {
+    position: relative;
+    color: #FF00FF;
+    text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+    color: #FF00FF;
+    font-size: 20px;
+    text-align: center;
+    bottom: 20px;
+}
+
+.Next {
+    position: relative;
+    color: #FF00FF;
+    text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+    color: #FF00FF;
+    font-size: 20px;
+    text-align: right;
+    bottom: 40px;
+}
+
 </html>
