--- a/Project 2/level 5/level 5-5.html
+++ b/Project 2/level 5/level 5-5.html
@@ -4,6 +4,19 @@
 <head>
   <title>level 5-5</title>
 </head>
+
+  	<div class="Previous"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2/level 5/level 5-4">Previous</a>
+      </div>
+
+    <div class="Home"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Home</a>
+      </div>
+
+    <div class="Next"> 
+      <a href="http://barocio11.github.io/interactivemedia323/Project 2">Next</a>
+      </div>
+
 <div>Happy as something unimportant <br>   
 and free as a thing unimportant. <br> </div> 
 <div>As something no one prizes <br>
@@ -49,5 +62,37 @@ div:nth-of-type(6) { content:''; position:relative; height:100%; width:100%; ani
 
 div:nth-of-type(7) { content:''; position:relative; height:100%; width:100%; animation:rotate 3s linear reverse infinite; }
 @keyframes rotate { 100% { transform:rotate(-360deg); } }
+
+a:hover{
+  color: black;
+  }
+
+.Previous {
+    position: relative;
+    color: #FF00FF;
+    text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+    color: #FF00FF;
+    font-size: 20px;
+}
+
+.Home {
+    position: relative;
+    color: #FF00FF;
+    text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+    color: #FF00FF;
+    font-size: 20px;
+    text-align: center;
+    bottom: 20px;
+}
+
+.Next {
+    position: relative;
+    color: #FF00FF;
+    text-shadow: 0 0 80px #FF00FF,0 0 30px #FF00FF,0 0 6px #FF00FF;
+    color: #FF00FF;
+    font-size: 20px;
+    text-align: right;
+    bottom: 40px;
+}
 
 </html>
